--- a/resources/ff.css
+++ b/resources/ff.css
@@ -1,4 +1,6 @@
-
+.ff_block {
+	display:block !important;
+}
 .ff_component {
 }
 .ff_description {
@@ -157,7 +159,19 @@ textarea {
 .ff_combo_vertical .ff_component .ff_input_text {
 	width: 70%;
 }
-	
+
+.ff_input_submit {
+    background-color: #EEEEFF;
+    border: 2px solid #9999EE;
+    border-radius: 10px 10px 10px 10px;
+    color: #666699;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 1em;
+    min-height: 14px;
+    padding: 2px 6px;
+}	
 	
 
 	
