* Made conditional fields pick up input from form * Refactored javascript a little bit to support initialising the field

--- a/templates/floraform/conditional.htm
+++ b/templates/floraform/conditional.htm
@@ -1,5 +1,5 @@
 {{@self->fields[0]->render()}}
 <div class="condition" id="{{@self->fields[0]->fullId()}}_conditional"></div>
 <script type="text/javascript">
-	ff_conditional("#{{@self->fields[0]->fullId()}}", {{@self->conditionsJson()}});
+	ff_initConditional("#{{@self->fields[0]->fullId()}}", {{@self->conditionsJson()}});
 </script>
