General template clean up changing references to @self->options["thing"] to @self->option("thing"); Added htmlOption back into Component since it is needed for the templating;

--- a/templates/floraform/choice.htm
+++ b/templates/floraform/choice.htm
@@ -1,4 +1,4 @@
-<check if="{{@self->options['mode'] == 'pull-down'}}">
+<check if="{{@self->option('mode') == 'pull-down'}}">
 	<true>
 		<select name="{{@self->fullId()}}" id="{{@self->fullId()}}" class=''>
 			<repeat group="{{ @self->option('choices') }}" key="{{ @code }}" value="{{ @value }}">
