--- a/templates/floraform/section.htm
+++ b/templates/floraform/section.htm
@@ -1,10 +1,10 @@
 <div id="{{@self->fullId('container')}}" class='{{@self->classes()}} ff_section'>
-	<check if='{{@self->hasOption("title")}}'>
-		<h{{@self->options["heading"]}} class='ff_title'>{{@self->options["title"]}}</h{{@self->options["heading"]}}>
+	<check if="{{@self->hasOption('title')}}">
+		<h{{@self->option("heading")}} class='ff_title'>{{@self->htmlOption("title")|raw}}</h{{@self->option("heading")}}>
 	</check>
 
-	<check if='{{@self->hasOption( "description" )}}'>
-               <div class='ff_description' id='{{@self->fullId("description")}}'>{{@self->options["description"]}}</div>
+	<check if="{{@self->hasHtmlOption( 'description' )}}">
+               <div class='ff_description' id='{{@self->fullId("description")}}'>{{htmlentities(@self->htmlOption("description"))}}</div>
 	</check>
 
 	<repeat group="{{@self->fields}}" value="{{@field}}">
