--- a/templates/floraform/text.htm
+++ b/templates/floraform/text.htm
@@ -1,1 +1,1 @@
-<input name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_text' value='{{@default}}' <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->options["size"]}}"</true></check> >
+<input name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_input_text' value='{{@default}}' <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> >
