--- a/templates/floraform/field_surround.htm
+++ b/templates/floraform/field_surround.htm
@@ -1,4 +1,4 @@
-<span id="{{@self->fullId()}}_container" class='{{@self->classes()}} ff_{{@self->option("layout")}}'>
-	<check if="{{@self->renderTitle()}}"><true><span id="{{@self->fullId('title')}}" class='ff_title'><label for="{{@self->fullId()}}" id="{{@self->fullId('label')}}">{{@self->renderTitle()}}</label>: </span></true></check>
+<span id="{{@self->fullId('container')}}" class='{{@self->classes()}} ff_{{@self->option("layout")}}'>
+	<check if="{{@self->hasHtmlOption('title')}}"><true><span id="{{@self->fullId('title')}}" class='ff_title'><label for="{{@self->fullId()}}" id="{{@self->fullId('label')}}">{{@self->htmlOption("title")}}</label>: </span></true></check>
 	{{@self->renderInput( @defaults )}}
 </span>
