--- a/templates/floraform/form.htm
+++ b/templates/floraform/form.htm
@@ -1,4 +1,4 @@
-<form method='POST'<check if='{{@self->hasOption("action")}}'><true> action='{{@self->option("action")}}'</true></check>>
+<form method='POST' enctype="multipart/form-data"<check if='{{@self->hasHtmlOption("action")}}'><true> action='{{@self->htmlOption("action")}}'</true></check>>
 	<div class="ff_form">
 			{{@form_content | raw}}
 	</div>
