--- a/templates/floraform/conditional.htm
+++ b/templates/floraform/conditional.htm
@@ -1,5 +1,5 @@
-{{@self->fields[0]->render()}}
+{{@self->fields[0]->render(@defaults)}}
 <div class="condition" id="{{@self->fields[0]->fullId()}}_conditional"></div>
 <script type="text/javascript">
-	ff_initConditional("#{{@self->fields[0]->fullId()}}", {{@self->conditionsJson()}});
+	ff_initConditional("#{{@self->fields[0]->fullId()}}", {{@self->conditionsJson(@defaults)}});
 </script>
