--- a/templates/floraform/list_item.htm
+++ b/templates/floraform/list_item.htm
@@ -1,7 +1,7 @@
-<li id="{{@self->fullId(@i.'_row')}}" class='ff_item {{@i%2?"ff_even":"ff_odd"}} {{@i?"":"ff_first"}}'>
-	<span class='ff_item_number' id='{{@self->fullId(@i."_number")}}'>{{@i+1}}</span>
+<li id="{{@self->fullId(@i.'_row')}}" class='ff_item {{@i%2?"ff_odd":"ff_even"}} {{@i?"":"ff_first"}}'>
+	<span class='ff_item_number' id='{{@self->fullId(@i."_number")}}'>{{@i}}</span>
 	<span class='ff_item_remove'><img id="{{@self->fullId(@i.'_remove')}}" src="{{@self->option('resourcesURL')}}/images/delete.png" /></span>
 	{{ ""; @field = clone @self->field}}
-	{{ ""; @field->setId( @i )}}
-	<span class='ff_item_value {{@field->classes( )}}'>{{@field->renderInput( @default ) | raw }}</span>
+	{{ ""; @field->setIdPrefix( $field->options["id-prefix"]."_".@i )}}
+	<span class='ff_item_value {{@field->classes( )}}'>{{@field->renderInput( @default ) }}</span>
 </li>
