Woops javascript bug

--- a/templates/floraform/list.htm
+++ b/templates/floraform/list.htm
@@ -15,5 +15,5 @@
 </repeat>
 ff['lists']['{{@self->fullId()}}'] = {{json_encode( array(
 	"template" => @self->renderInputRow( @defaults, "ROW_ID" ),
-	"next_index" => @n ))}}
+	"next_index" => @n+1 ))}}
 </script>
