--- a/templates/floraform/section.htm
+++ b/templates/floraform/section.htm
@@ -1,6 +1,6 @@
 <div id="{{@self->fullId('container')}}" class='{{@self->classes()}} ff_section'>
 	<check if="{{@self->hasOption('title')}}">
-		<h{{@self->option("heading")}} class='ff_title'>{{@self->htmlOption("title")}}</h{{@self->option("heading")}}>
+		<h{{@self->option("heading")}} class='ff_title'>{{@self->htmlOption("title")|raw}}</h{{@self->option("heading")}}>
 	</check>
 
 	<check if="{{@self->hasHtmlOption( 'description' )}}">
