--- a/templates/floraform/list.htm
+++ b/templates/floraform/list.htm
@@ -3,17 +3,22 @@
 	<set n="{{@self->option( 'min-items' )}}"/>
 </check>
 <ul id="{{@self->fullId('list')}}">
-	<repeat group="{{range( 1, @n )}}" value="{{@i}}">
-		{{@self->renderInputRow( @default, @i )}}
-	</repeat>
+	<check if="{{isset(@self->field)}}">
+		<repeat group="{{range( 1, @n )}}" value="{{@i}}">
+			{{@self->renderInputRow( @default, @i )}}
+		</repeat>
+	</check>
 </ul>
-<span class='ff_item_add' id="{{@self->fullId('add')}}"><img src='{{@self->option("resourcesURL")}}/images/add.png' /> More</span>
-<script type="text/javascript">
-	ff_bindAddButton( '{{@self->fullId()}}' );
-<repeat group="{{range( 1, @n )}}" value="{{@i}}">
-	ff_bindRemoveButton( '{{@self->fullId()}}',{{@i}} );
-</repeat>
-ff['lists']['{{@self->fullId()}}'] = {{json_encode( array(
-	"template" => @self->renderInputRow( @defaults, "ROW_ID" ),
-	"next_index" => @n+1 ))}}
-</script>
+<check if="{{isset(@self->field)}}">
+	<span class='ff_item_add' id="{{@self->fullId('add')}}"><img src='{{@self->option("resourcesURL")}}/images/add.png' /> More</span>
+
+	<script type="text/javascript">
+		ff_bindAddButton( '{{@self->fullId()}}' );
+	<repeat group="{{range( 1, @n )}}" value="{{@i}}">
+		ff_bindRemoveButton( '{{@self->fullId()}}',{{@i}} );
+	</repeat>
+	ff['lists']['{{@self->fullId()}}'] = {{json_encode( array(
+		"template" => @self->renderInputRow( @defaults, "ROW_ID" ),
+		"next_index" => @n+1 ))}}
+	</script>
+</check>
