Multichoice passed through to POST correctly

--- a/templates/floraform/multichoice.htm
+++ b/templates/floraform/multichoice.htm
@@ -1,6 +1,6 @@
 <check if="{{@self->option('mode') == 'multi-list'}}">
 	<true>
-		<select name="{{@self->fullId()}}" id="{{@self->fullId()}}" class='ff_multiselect'>
+		<select name="{{@self->fullId()}}[]" id="{{@self->fullId()}}" class='ff_multiselect'>
 			<repeat group="{{ @self->option('choices') }}" key="{{ @code }}" value="{{ @value }}">
 				<option value="{{@code}}" {{in_array(@code, @default) ? 'selected="selected"' : ''}}>{{@value}}</option>
 			</repeat>
@@ -10,7 +10,7 @@
 		<div class="ff_multiselect">
 		<repeat group="{{@self->option('choices')}}" key="{{@code}}" value="{{@value}}">
 			<label class='ff_checkbox_option ff_checkbox_option_{{@code}}'>
-				<input class='ff_input_checkbox' value='{{@code}}' name='{{@self->fullId()}}' type='checkbox'	{{ in_array( @code, @default ) ? " checked='checked'" : "" }} />
+				<input class='ff_input_checkbox' value='{{@code}}' name='{{@self->fullId()}}[]' type='checkbox'	{{ in_array( @code, @default ) ? " checked='checked'" : "" }} />
 			{{@value}}
 			</label>
 		</repeat>
