--- a/templates/floraform/htmlarea.htm
+++ b/templates/floraform/htmlarea.htm
@@ -2,4 +2,8 @@
 <check if="{{@self->hasOption( 'rows' )}}"><true> rows="{{@self->option('rows')}}"</true></check>
 <check if="{{@self->hasOption( 'cols' )}}"><true> cols="{{@self->option('cols')}}"</true></check>
 style="width:100%">{{@default}}</textarea>
-<exclude><script type="text/javascript">ff_initWysiwyg( '{{@self->fullID()}}' );</script></exclude>
+<script type="text/javascript">
+$( document ).ready(function() {
+	ff_addWysiwyg( '{{@self->fullID()}}' );
+});
+</script>
