Corrected bug in loading default times in DateTime field

--- a/templates/floraform/datetime.htm
+++ b/templates/floraform/datetime.htm
@@ -1,7 +1,7 @@
-<div class="bootstrap-datepicker"><input name="{{@self->fullId()}}_date" id="{{@self->fullId()}}_date" type="text" class="ff_input_text" value="{{@default}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
+<div class="bootstrap-datepicker"><input name="{{@self->fullId()}}_date" id="{{@self->fullId()}}_date" type="text" class="ff_input_text" value="{{@defaultdate}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
 
 
-<div class="bootstrap-timepicker"><input name="{{@self->fullId()}}_time" id="{{@self->fullId()}}_time" type="text" class="ff_input_text" value="{{@default}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
+<div class="bootstrap-timepicker"><input name="{{@self->fullId()}}_time" id="{{@self->fullId()}}_time" type="text" class="ff_input_text" value="{{@defaulttime}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
 
 <script>
 // TODO make this configurable
@@ -12,6 +12,7 @@ $('#{{@self->fullId()}}_date').datepicker({
 $('#{{@self->fullId()}}_time').timepicker({
     minuteStep: 5,
     showInputs: false,
-    disableFocus: true
+    disableFocus: true,
+    defaultTime:false
 });
 </script>
