Support default values for info fields so that you can have custom content based on ID

--- a/templates/floraform/info.htm
+++ b/templates/floraform/info.htm
@@ -1,1 +1,1 @@
-<check if="{{@self->hasHtmlOption( 'content' )}}"><true>{{@self->htmlOption("content")}}</true></check>
+<check if="{{@self->hasHtmlOption( 'content' )}}"><true>{{@self->htmlOption("content")}}</true></check> {{@default}}
