--- a/templates/floraform/datetime.htm
+++ b/templates/floraform/datetime.htm
@@ -1,7 +1,7 @@
-<div class="bootstrap-datepicker"><input name="{{@self->fullId()}}_date" id="{{@self->fullId()}}_date" type="text" class="ff_input_text" value="{{@defaultdate}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
+<div class="bootstrap-datepicker"><input name="{{@self->fullId()}}_date" id="{{@self->fullId()}}_date" placeholder="YYYY-MM-DD" type="text" class="ff_input_text" value="{{@defaultdate}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
 
 
-<div class="bootstrap-timepicker"><input name="{{@self->fullId()}}_time" id="{{@self->fullId()}}_time" type="text" class="ff_input_text" value="{{@defaulttime}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
+<div class="bootstrap-timepicker"><input name="{{@self->fullId()}}_time" id="{{@self->fullId()}}_time" placeholder="hh:mm AM/PM" type="text" class="ff_input_text" value="{{@defaulttime}}" <check if="{{@self->hasOption( 'size' )}}"><true>size="{{@self->option("size")}}"</true></check> ></div>
 
 <script>
 // TODO make this configurable
